Readme tweaks, fix text clipping

--- a/source/wasm/static/style_reset.css
+++ b/source/wasm/static/style_reset.css
@@ -23,7 +23,7 @@ Baseline un-styling.
     font-family: inherit;
     font-size: inherit;
     flex-shrink: 0;
-    line-height: 1em;
+    line-height: 1.4em;
   }
 
   html {
